<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogoPS13SI"
            android:layout_width="@dimen/logoPS3SI_width"
            android:layout_height="@dimen/logoPS3SI_height"
            android:src="@drawable/logops13si"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvLoginTitle"
            android:layout_marginTop="@dimen/margin_top_default"
            android:contentDescription="@string/desc_logoPS3SI" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoPS13SI"
            app:layout_constraintBottom_toTopOf="@id/tilLoginEmail"
            android:text="@string/PS13SI"
            android:textSize="@dimen/text_title_PS3SI"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_top_title_logo"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_form_title"
            android:layout_marginStart="@dimen/margin_screen_side_default"
            android:layout_marginEnd="@dimen/margin_screen_side_default"
            android:hint="@string/hint_your_email"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
            app:layout_constraintBottom_toTopOf="@id/tilLoginPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/icon_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_forms"
            android:layout_marginStart="@dimen/margin_screen_side_default"
            android:layout_marginEnd="@dimen/margin_screen_side_default"
            android:hint="@string/hint_your_password"
            app:layout_constraintTop_toBottomOf="@id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            app:startIconDrawable="@drawable/icon_padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_button_form"
            android:layout_marginBottom="@dimen/margin_bottom_screen_default"
            android:layout_marginStart="@dimen/margin_screen_side_default"
            android:layout_marginEnd="@dimen/margin_screen_side_default"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/button_text"
            android:textColor="@color/white"
            android:backgroundTint="@color/pink"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>